@@ -23,6 +23,7 @@ v4.12 ??? ??? 2010
     be handled as Python integers rather that single character strings.
   - Added the L and M format characters to sipBuildResult(), sipCallMethod()
     and sipParseResult().
+  - Added sipGetAddress().
   - Added the -T flag to sip to suppress the timestamp in the header comments
     of generated files.
   - sip.voidptr now behaves like a Python memoryview object and supports
